// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`proxies "contextLines" option(s) 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -10,0 +10,1 @@
+     so"
`;

exports[`proxies "expand" option(s) 1`] = `
"Snapshot Diff:
- First value
+ Second value


      some
      some
      some
      some
      some
      some
      some
      not
+     so
      very
      long
      script
"
`;

exports[`works with custom name: slim 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,9 +5,10 @@
      some
      some
      some
      some
      not
+     so
      very
      long
      script
"
`;

exports[`works with default options 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -5,9 +5,10 @@
      some
      some
      some
      some
      not
+     so
      very
      long
      script
"
`;
